fix alignment issue for focused tooltip privacy policy on chrome

--- a/app/assets/stylesheets/petition.css.scss
+++ b/app/assets/stylesheets/petition.css.scss
@@ -115,6 +115,7 @@
   display: none;
 }
 .centered {
+  clear: both;
   text-align: center;
   .toggle_tooltip a:hover {
     color: #3299CC;
